--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,6 +67,7 @@ main h1 {
     margin-bottom: 1rem;
     font-size: 2rem;
     text-align: center;
+    color: black;
 }
 
 .sections-row {
@@ -133,11 +134,11 @@ footer {
 
 .course-card .technologies {
     font-weight: bold;
-    color: #1abc9c;
+    color: black;
 }
 
 .course-card .completed {
-    color: green;
+    color: black;
     font-weight: bold;
 }
 
@@ -151,7 +152,7 @@ footer {
     padding: 0.5rem 1rem;
     border: none;
     background-color: #1abc9c;
-    color: white;
+    color: black;
     border-radius: 4px;
     cursor: pointer;
     font-size: 1rem;
