--- a/styles/styles.css
+++ b/styles/styles.css
@@ -138,7 +138,12 @@ footer {
 }
 
 .course-card .completed {
-    color: black;
+    color: rgba(45, 116, 17, 0.979);
+    font-weight: bold;
+}
+
+.course-card .in-progress {
+    color: rgb(177, 50, 27);
     font-weight: bold;
 }
 
