--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -49,6 +49,7 @@ h1 {
     margin-top: 1em;
 }
 
+
 section {
     display: flex;
     justify-content: space-around;
@@ -57,10 +58,54 @@ section {
     background: white;
 }
 
+.spotlight {
+    text-align: center;
+    padding: 2rem;
+}
+
+.spotlight>h2 {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+}
+
+.spotlight {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.spotlight-articles {
+    display: grid;
+    justify-content: center;
+    gap: 2rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
+}
+
+.spotlight article {
+    background-color: #f0f0f0;
+    padding: 1rem;
+    border-radius: 8px;
+    width: 250px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
 main {
     margin: 0 auto;
     max-width: 800px;
 
+}
+
+main h1 a {
+    display: inline-block;
+    transition: transform 0.3s ease, text-decoration 0.3s ease;
+    text-decoration: none;
+    color: black;
+}
+
+main h1 a:hover {
+    text-decoration: none;
+    transform: translateY(-5px);
 }
 
 main button {
