--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -134,6 +134,12 @@ main button {
     margin: 20px auto;
 }
 
+.spotlight-articles {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
 /* .js-cards {
     background-color: #ffffff;
     border-radius: 10px;
@@ -202,6 +208,21 @@ footer img {
 
     .hero {
         height: 200px;
+    }
+
+    .spotlight {
+        display: flex;
+    }
+
+    .spotlight-articles {
+        flex-direction: column;
+        align-items: center;
+        /* optional: center the cards */
+    }
+
+    .spotlight-articles article {
+        width: 100%;
+        /* or a specific value like 90% */
     }
 
     header nav {
