--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -140,44 +140,7 @@ main button {
     gap: 1rem;
 }
 
-/* .js-cards {
-    background-color: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-    padding: 16px;
-    max-width: 500px;
-    width: 100%;
-    text-align: center;
-    transition: transform 0.2s ease;
-}
 
-.js-cards:hover {
-    transform: translateY(-4px);
-}
-
-.js-cards h3 {
-    font-size: 1.2em;
-    margin-bottom: 10px;
-}
-
-.js-cards img {
-    width: 100px;
-    height: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    object-fit: cover;
-}
-
-article,
-section>div {
-    background: white;
-    padding: 1em;
-    margin: 1em;
-    flex: 1 1 30%;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    min-width: 250px;
-} */
 
 footer {
     background-color: #ddd;
@@ -190,6 +153,53 @@ footer img {
     height: 24px;
     margin: 0 0.5em;
     vertical-align: middle;
+}
+
+.modal {
+    display: none;
+
+    position: fixed;
+
+    z-index: 1;
+
+    left: 0;
+    top: 0;
+    width: 100%;
+
+    height: 100%;
+
+    overflow: auto;
+
+    background-color: rgb(0, 0, 0);
+
+    background-color: rgba(0, 0, 0, 0.4);
+
+}
+
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+
+}
+
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 @media (max-width: 600px) {
