--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -49,6 +49,9 @@ h1 {
     margin-top: 1em;
 }
 
+h3 {
+    text-align: center;
+}
 
 section {
     display: flex;
@@ -94,6 +97,41 @@ main {
     margin: 0 auto;
     max-width: 800px;
 
+}
+
+#poi-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 20px;
+    justify-content: center;
+}
+
+#poi-cards figure {
+    transition: transform 0.3s ease, filter 0.3s ease;
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+/* Hover effect applied only on devices that support hover */
+@media (min-width:640px) {
+    #poi-cards figure:hover {
+        transform: scale(1.05);
+        filter: brightness(1.1);
+    }
+}
+
+.card img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+
+.card {
+    min-width: 0;
+    overflow: hidden;
 }
 
 main h1 a {
