--- a/final/styles/project.css
+++ b/final/styles/project.css
@@ -1,6 +1,6 @@
 /* Color Scheme */
 :root {
-    --primary-color: #2E8B57;
+    --primary-color: #347e54;
     /* SeaGreen */
     --secondary-color: #FFD700;
     /* Gold */
